<resources>
    <string name="app_name">Tarjetakuna</string>
    <string name="demo_button">Demo button: fragment switch </string>
    <string name="hello">Hello</string>
    <string name="home_hello">Hello %1$s!</string>
    <string name="home_welcome">Welcome to Tarjetakuna!</string>
    <string name="home_welcome_signed_in">Welcome to Tarjetakuna, %1$s!</string>
    <string name="home_welcome_description">Start discovering right away, or sign in to view and manage your Magic: The Gathering collection!</string>
    <string name="filter_option_title">Filter options</string>
    <string name="filter">Filter</string>
    <string name="nav_header_title" />
    <string name="nav_header_subtitle" />
    <string name="nav_header_desc">Navigation header</string>

    <string name="testforauth">TestForAuth</string>
    <string name="sign_out">Sign Out</string>
    <string name="device_is_not_connected_to_internet">Device is not connected to internet</string>
    <string name="authentication_failed_please_try_again">Authentication failed, please try again</string>
    <string name="confirmSignOut_question">Are you sure you want to sign out?</string>
    <string name="confirmSignOut_yes">Yes</string>
    <string name="confirmSignOut_no">No</string>

    <string name="menu_home">Home</string>
    <string name="menu_browser">Collection</string>
    <string name="menu_scanner">Scan</string>
    <string name="menu_webapi">Webapi</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_exportcollection">Export Collection</string>
    <string name="menu_authentication">Authentication</string>
    <string name="menu_authentication_button">Authentication button</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_user_cards">User cards</string>
    <string name="menu_single_card">Card</string>
    <string name="menu_single_set">Set</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_confirm_sign_out">Confirm Sign Out</string>

    <string name="scanner_button">Scan a card</string>
    <string name="scanner_description">Here you can scan a card by clicking on the button below.</string>
    <string name="scanner_content_description_image">Picture of a card</string>

    <string name="operation_success">"Success"</string>
    <string name="operation_failed">"The operation has failed. Please try again."</string>

    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in">Sign in</string>
    <string name="go_back_to_home_page">Go back to home page</string>
    <string name="txt_error_msg">Error: %s</string>

    <!--    web api texts-->
    <string name="api_random_card">Random Card</string>
    <string name="api_cardsBySet">Cards By Set</string>
    <string name="api_cardsByName">Cards By Name</string>
    <string name="api_cardName">Card Name</string>
    <string name="api_cardById">Cards By Id</string>
    <string name="api_cardId">Card Id</string>
    <string name="api_setId">Set Id</string>
    <string name="api_sets">Sets</string>
    <string name="api_setByCode">Set By Code</string>
    <string name="api_default_results">No results yet…</string>
    <string name="api_waiting_results">Waiting for results…</string>

    <string name="meandering_towershell">Meandering Towershell</string>
    <string name="m15">M15</string>
    <string name="this_image_is_a_card">this image is a card</string>

    <string name="text_set_card">set</string>
    <string name="text_get_card">get</string>
    <string name="text_remove_card">remove</string>
    <string name="get_card_button">Get Card</string>
    <string name="set_card_button">Add Card</string>
    <string name="remove_card_button">Remove Card</string>
    <string name="manage_collection_button">Manage Collection</string>
    <string name="text_add_success">%1$s was successfully added to your collection</string>
    <string name="text_remove_success">%1$s was successfully removed from your collection</string>
    <string name="text_get_success">Card %1$s was successfully retrieved from your collection</string>
    <string name="text_get_fail">Failed to retrieve card %1$s </string>

    <string name="ExportCollection_appNotFound">No app found to share Excel file</string>
    <string name="ExportCollection_fileCreationFailed">Failed to write data to Excel file</string>
    <string name="ExportCollection_fileDirectoryNotFound">Failed to access to the documents directory</string>

    <string name="save_button_text">Save</string>
    <string name="description_entry_hint">Enter a description here</string>
    <string name="name_entry_hint">Enter your name</string>
    <string name="profile_picture_content_description">Profile picture</string>
    <string name="image_of_the_card">Image of the card</string>
    <string name="error_load_card">Error loading the card</string>
    <string name="single_card_showing_set">From %1$s (%2$s)</string>
    <string name="single_card_showing_number">#%1$d</string>
    <string name="single_card_showing_subtypes">- %1$s</string>
    <string name="single_card_showing_artist">Artist : %1$s</string>
    <string name="single_card_showing_stats">(%1$s/%2$s)</string>
    <string name="single_card_showing_type_subtypes_stats">%1$s%2$s%3$s</string>
    <string name="single_card_showing_mana_cost">Mana cost : %1$s</string>
    <string name="single_card_showing_add_to_collection">+</string>
    <string name="single_card_showing_remove_collection">-</string>
    <string name="single_card_showing_add_to_wanted">add to wanted cards</string>
    <string name="single_card_showing_remove_wanted">remove from wanted cards</string>
    <string name="single_card_ask_connection">Please connect if you want to manage the card</string>
    <string name="single_card_users_have">They have this card</string>
    <string name="single_card_users_want">They want this card</string>
    <string name="single_card_distance">%1$s km</string>

    <string name="browser_filter">Filter</string>
    <string name="browser_sort">Sort</string>
    <string name="browser_filter_by_set">By set:</string>
    <string name="browser_enter_set_code">Enter the set code</string>
    <string name="browser_apply">Apply</string>
    <string name="browser_filter_by_mana">By mana:</string>
    <string name="browser_enter_manacost">Enter the mana cost:</string>
    <string name="browser_sort_by_mana">Mana</string>
    <string name="browser_sort_by_name">Name</string>
    <string name="browser_sort_by_rarity">Rarity</string>
    <string name="browser_clear_filters">Clear all the filters</string>
    <string name="browser_sort_by_set">Set</string>
    <string name="browser_page_adapter_collection_title">My Collection</string>
    <string name="browser_page_adapter_wanted_title">Cards I Want</string>

    <string name="single_set_code">(%1$s)</string>
    <string name="single_set_type">Type : %1$s</string>
    <string name="single_set_block">Block : %1$s</string>
    <string name="single_set_release_date">Release date : %1$s</string>
    <string name="single_set_error_loading">Error loading the set</string>
    <string name="browser_owned_cards_only">Only show owned cards</string>

    <string name="home_add_a_random_card">add a random card</string>
    <string name="api_cards">Random Card</string>
    <string name="chats_my_chats">My chats</string>
    <string name="chat_list_no_message">no message</string>
    <string name="chat_list_item_userlogo">user profile picture</string>
    <string name="chat_list_item_defaultUsername">Username</string>
    <string name="chat_list_item_defaultTime">00:00</string>
    <string name="chat_list_item_default_lastMessage">Last message</string>
    <string name="chat_list_item_newMsgNotification">New message</string>
    <string name="chat_userLogo">User logo</string>
    <string name="chat_default_username">Username</string>
    <string name="chat_enter_message">Enter message</string>
    <string name="chat_send_message">Send</string>
    <string name="msg_date">date</string>
    <string name="msg_default_content">Message content</string>
    <string name="msg_default_date">00:00</string>
    <string name="singleCard_quantity_count">0</string>
    <string name="single_card_manage_collection">Manage collection:</string>
    <string name="cards_recycler_view_quantity">1X</string>

</resources>
