<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.github.sdp.tarjetakuna.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_browser"
        android:name="com.github.sdp.tarjetakuna.ui.browser.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />

    <fragment
        android:id="@+id/nav_scanner"
        android:name="com.github.sdp.tarjetakuna.ui.scanner.ScannerFragment"
        android:label="@string/menu_scanner"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/nav_webapi"
        android:name="com.github.sdp.tarjetakuna.ui.webapi.WebApiFragment"
        android:label="@string/menu_webapi"
        tools:layout="@layout/fragment_web_api" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.github.sdp.tarjetakuna.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_authentication"
        android:name="com.github.sdp.tarjetakuna.ui.authentication.AuthenticationFragment"
        android:label="@string/menu_authentication"
        tools:layout="@layout/fragment_authentication" />

    <fragment
        android:id="@+id/nav_single_card"
        android:name="com.github.sdp.tarjetakuna.ui.singlecard.SingleCardFragment"
        android:label="@string/menu_single_card"
        tools:layout="@layout/fragment_single_card" />

    <fragment
        android:id="@+id/nav_single_set"
        android:name="com.github.sdp.tarjetakuna.ui.singleset.SingleSetFragment"
        android:label="@string/menu_single_set"
        tools:layout="@layout/fragment_single_set" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.github.sdp.tarjetakuna.ui.chat.ChatListFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chat_list" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.github.sdp.tarjetakuna.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />
</navigation>
