<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:theme="@style/Theme.Tarjetakuna.NoActionBar">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_20"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_browser"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_scanner" />
        <item
            android:id="@+id/nav_webapi"
            android:icon="@drawable/baseline_language_24"
            android:title="@string/menu_webapi" />

        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/fui_ic_mail_white_24dp"
            android:title="@string/menu_chats" />
    </group>
</menu>
