<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.singleset.SingleSetFragment"
    android:theme="@style/Theme.Tarjetakuna.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/singleSet_set_name_text"
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_set_error_loading"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/singleSet_set_code_text"
            style="@style/DescriptionStyleNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_set_code"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/singleSet_set_type_text"
                style="@style/DescriptionStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/single_set_type"
                android:layout_marginStart="@dimen/text_margin"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/singleSet_set_block_text"
                style="@style/DescriptionStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/single_set_block"
                android:layout_marginEnd="@dimen/text_margin"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <TextView
            android:id="@+id/singleSet_set_release_date_text"
            style="@style/DescriptionStyleNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_set_release_date"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
